# sim_robots

./: README.md
common_lib/inverse_kine/: CMakeLists.txt  package.xml
common_lib/inverse_kine/src/: jointStatesMonitor.cpp  xyzCoordinatesNode.cpp
common_lib/opencv/: CMakeLists.txt  cheatsheet.txt  package.xml
common_lib/opencv/src/: imageViewerNode.cpp  objectDetection.cpp
description/: arm_model.xacro  robot.urdf.xacro  robot_arm.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: launch_sim.launch.py  robo_arm_gazebo.launch.py
maps/: mapper1.data  mapper1_old.pgm  mapper1_old.yaml
mobile_base/: CMakeLists.txt  package.xml
mobile_base/config/: mapper_params_online_async.yaml
mobile_base/description/: camera.xacro  gazebo_control.xacro  lidar.xacro
mobile_base/launch/: launch_sim.launch.py  rsp.launch.py
mobile_base/simple_base/description/: robot_core.xacro
robo_arm/roboArm_moveit/: CMakeLists.txt  package.xml
robo_arm/roboArm_moveit/config/: joint_limits.yaml  moveit_controllers.yaml
robo_arm/robo_arm/: CMakeLists.txt  cheatsheet  package.xml
robo_arm/robo_arm/description/: arm_model.xacro
robo_arm/roboarm_remote/: CMakeLists.txt  package.xml
robo_arm/roboarm_remote/action/: ArmTask.action
simple_arm/robo_arm/: cheatsheet  package.xml
simple_arm/robo_arm/config/: controllers.yaml
simple_arm/robo_arm/description/: arm_gazebo.xacro  arm_model.xacro  common_properties.xacro  ros2_control.xacro
simple_arm/robo_arm/launch/: controller.launch.py  displayArm.launch.py  remote_control.launch.py
simple_arm/robo_arm/rviz/: robo_arm.rviz
simple_arm/roboarm_moveit/: CMakeLists.txt  package.xml
simple_arm/roboarm_moveit/config/: initial_positions.yaml  pilz_cartesian_limits.yaml  roboarm.srdf
simple_arm/roboarm_moveit/launch/: moveit.launch.py
simple_arm/roboarm_remote/: CMakeLists.txt  package.xml
simple_arm/roboarm_remote/action/: ArmJoints.action
simple_arm/roboarm_remote/src/: arm_joints_server.cpp  arm_task_server.cpp  simple_client.cpp
